--- a/style.css
+++ b/style.css
@@ -16,4 +16,23 @@
     background-color: #1abc9c;   
 }
 
+.sixth-container{
+    background-color: #3a546d;
+}
 
+.seventh-container{
+    background-color: #2c3e50;
+}
+
+
+button{
+    background-color: #1abc9c;
+    color: white;
+    font-size: 1.2em;
+    font-weight: bold;
+    border: none;
+    border-radius: 3px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
