--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .test{
     border: 1px black solid;
-    min-height: 100px;
+    min-height: 200px;
 }
 
 
@@ -25,13 +25,25 @@
 }
 
 
-button{
+#second-button{
     background-color: #1abc9c;
     color: white;
     font-size: 1.2em;
     font-weight: bold;
     border: none;
     border-radius: 3px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#first-button{
+    background-color: #1abc9c;
+    color: white;
+    font-size: 1.2em;
+    
+    border: 1px white solid;
+    border-radius: 5px;
     padding: 5px 10px;
     margin-top: 10px;
     margin-bottom: 20px;
