--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-.test{
-    border: 1px black solid;
-    min-height: 200px;
-}
+
 
 
 .first-container{
@@ -48,3 +45,26 @@
     margin-top: 10px;
     margin-bottom: 20px;
 }
+
+.my-circle{
+    width: 50px;
+    height: 50px;
+
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.my-image-container{
+    min-width: 200px;
+}
+
+.nav-right nav{
+    background-color: #2c3e50;
+}
+
+
+
+.third-container .my-separator .fa-star{
+    color: #2c3e50;
+}
+
