--- a/style.css
+++ b/style.css
@@ -68,3 +68,22 @@
     color: #2c3e50;
 }
 
+.my-bar-1{
+    height: 4px;
+    min-width: 100px;
+    
+
+    background-color: white;
+
+    border-radius: 2px;
+}
+
+.my-bar-2{
+    height: 4px;
+    min-width: 100px;
+    
+
+    background-color: #2c3e50;
+
+    border-radius: 2px;
+}
